--- a/README.org
+++ b/README.org
@@ -4,9 +4,9 @@ WORK IN PROGRESS
 ** unit aware arithmentic
 unit aware arithmetic calculations like:
 #+begin_src
-a = (2.5[km^3] / 3[m^2]);
-b = ((1[km^1] * 2[km^1]) * (3[m^1] - 4[m^2]));
-c = 1[km^3];
+a = (10[kilometers^2] + 30[meters^2]);
+b = ((1[km^1] * 2[km^2]) / (3[m^1] - 4[m^1]));
+c = (a + b);
 #+end_src
 
 The input is parsed and then evaluated.
