--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+title: Readme
 * r2engine
 WORK IN PROGRESS
-** unit aware arithmentic
+** unit aware arithmetic
 unit aware arithmetic calculations like:
 #+begin_src
 a = (10[kilometers^2] + 30[meters^2]);
