--- a/notes.org
+++ b/notes.org
@@ -64,12 +64,11 @@ takes =f64=, =Vec<f64>=
 Turned out to be: generic types (=struct<T>=) with type specific behaviour in traits.
 *** TODO Add dimensionless values
   - [ ] parse dimensionless values without units (scalars/scalar vecs without units) as values with power 0 and units None
-*** TODO Add multiplication across unit families
-unit families?
-eg currency / time.. it remains unresolved in the equation, we need to represent these
-or are these just dimensions?
-when the unit family is different + and - make no sense but * and / do, you get currency / time for example
-think about
+*** TODO Unit syntax sugar
+`m^1` should be allowed as `m`
+
+*** TODO simplification
+m/s * m/s == m^2/s^2
 *** TODO Parse csvs with declared var names as column headings
 #+begin_src
 a = csv{height_of_side[km]};
@@ -79,3 +78,4 @@ c = (a * b);
 *** TODO =impl Fmt for MyTypes=
 so that we can print out vector and non vector calculations
 *** TODO Add a cli
+*** TODO add a repl
